--- a/StatusReport/pom.xml
+++ b/StatusReport/pom.xml
@@ -18,7 +18,6 @@
     <maven.compiler.source>1.7</maven.compiler.source>
     <maven.compiler.target>1.7</maven.compiler.target>
   </properties>
-
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -26,6 +25,11 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+    <groupId>com.fasterxml.jackson.core</groupId>
+    <artifactId>jackson-databind</artifactId>
+    <version>2.8.1</version>
+</dependency>
       <!-- Spring MVC Dependency -->
     <dependency>
       <groupId>org.springframework</groupId>
@@ -45,19 +49,14 @@
     <artifactId>hibernate-core</artifactId>
     <version>4.3.11.Final</version>
 </dependency>
-
        <dependency>
     <groupId>com.h2database</groupId>
     <artifactId>h2</artifactId>
     <version>1.4.197</version>
     <scope>runtime</scope>
 </dependency>
-
-
   </dependencies>
-
   <build>
     <finalName>StatusReport</finalName>
-   
   </build>
 </project>
